--- a/src/pages/Historico.css
+++ b/src/pages/Historico.css
@@ -231,7 +231,7 @@ body, .historico-table-container, .historico-title, .historico-search, .historic
 /* Responsivo para celulares */
 @media (max-width: 600px) {
   .historico-header { flex-direction: column; align-items: flex-start; gap: 1rem; padding-top: 1rem; width: 100vw; margin: 0 auto 1rem auto; }
-  .historico-title { font-size: 1.1rem; margin-bottom: 0.7rem; margin-left: 40px;}
+  .historico-title { font-size: 1.1rem; margin-bottom: 0.7rem; margin-left: 10%;}
   .historico-table-container { padding: 0.7rem 0.2rem; max-width: 100vw; min-width: 0; box-sizing: border-box; margin-right: 50px; margin-left: -20px; }
   .historico-table th, .historico-table td { padding: 0.5rem 0.4rem; font-size: 0.93rem; }
   .produto-miniatura { width: 22px; height: 22px; }
